[#6646] Fix some violations reported by FindBugs (#6652)